# lila-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  TESTING.md  claude-agents-research.md  docker-compose.yml  export_data.py  fastmcp.json  import_data.py  init_mcp_database.sh  lila_mcp_server.py  nginx.conf  pyproject.toml  requirements.txt  simple_lila_mcp_server.py  test_mcp_validation.py  test_orchestrators.py
graphs/: lila-graph-schema-v7.json  lila-graph-schema-v9.json
graphs2/: lila-graph-schema-v8.json
orchestrators/: README.md  architecture_orchestrator.py  base_orchestrator.py  ux_orchestrator.py
outputs/ux_design/01_research/: user_research.md
outputs/ux_design_analysis/01_research/: user_research.md
outputs/ux_design_analysis/02_ia/: information_architecture.md
repo_analysis/: README.md
repo_analysis/diagrams/: 02_architecture_diagrams.md
repo_analysis/docs/: 01_component_inventory.md  03_data_flows.md  04_api_reference.md
repo_analysis_backup_20251003_112439/diagrams/: 02_architecture_diagrams.md
repo_analysis_backup_20251003_112439/docs/: 04_api_reference.md
tools/: mcp_registry.py
